# C-

11.10.2020/: 11.10.2020.sln
11.10.2020         2/: 11.10.2020         2.sln
11.10.2020         2/11.10.2020         2/: 11.10.2020         2.cpp  11.10.2020         2.vcxproj  11.10.2020         2.vcxproj.filters
11.10.2020         2/Debug/: 11.10.2020         2.ilk
11.10.2020-1/: 11.10.2020-1.cpp
11.10.2020-3/: 11.10.2020-3.sln
11.10.2020-3/11.10.2020-3/: 11.10.2020-3.cpp  11.10.2020-3.vcxproj  11.10.2020-3.vcxproj.filters
11.10.2020-3/Debug/: 11.10.2020-3.ilk
11.10.2020-4/: 11.10.2020-4.sln
11.10.2020-4/11.10.2020-4/: 11.10.2020-4.cpp  11.10.2020-4.vcxproj  11.10.2020-4.vcxproj.filters
11.10.2020-4/Debug/: 11.10.2020-4.ilk
11.10.2020-5/: 11.10.2020-5.sln
11.10.2020-5/11.10.2020-5/: 11.10.2020-5.cpp  11.10.2020-5.vcxproj  11.10.2020-5.vcxproj.filters
11.10.2020-5/Debug/: 11.10.2020-5.ilk
14.10.2020/: 14.10.2020.sln
14.10.2020-2/: 14.10.2020-2.sln
16.10.2020-1/: filterMotives.cpp  filterMotives.hpp  main.cpp
24.10.2020-1 - Difference of 2/: diffOfTwo.cpp  diffOfTwo.hpp  main.cpp
Code-Files/: 11.10.2020-2.cpp  11.10.2020-3.cpp  11.10.2020-4.cpp  11.10.2020-5.cpp  14.10.2020-1.cpp  14.10.2020-2.cpp
Code-Files/16.10.2020-1/: 16.10.2020-1.cpp  CMakeLists.txt  task.txt
Code-Files/remove_motives/: CMakeLists.txt
Code-Files/remove_motives/include/remove_motives/: diffN.h  remove_motives.h
Code-Files/remove_motives/src/: diffN.cpp  main.cpp  remove_motives.cpp
QuickSort/: CMakeLists.txt  main.cpp  quickSort.cpp  quickSort.hpp
(+66 files in other folders)
